# HasiiMusicBot

./: .env.example  .gitignore  BUG_FIXES_SUMMARY.md  CHECKLIST.md  COMPARISON.md  DEPLOYMENT.md  GITHUB_RELEASE_1.0.5.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEDIA_GROUP_BROADCAST_UPDATE.md  PROJECT_STRUCTURE.md  RELEASE_NOTES_1.0.5.md  Readme.md  SECURITY.md  SETUP_TOURNAMENT.md  Structure.md  TELEGRAM_VIDEO_FIX.md  TOURNAMENT_SYSTEM.md  VPLAY_FEATURE.md  config.py  logs.txt  pyproject.toml  requirements.txt  sample.env  setup
.github/workflows/: deploy-docs.yml
HasiiMusic/: __init__.py  __main__.py
HasiiMusic/core/: bot.py  calls.py  dir.py  lang.py  mongo.py  preload.py  telegram.py  userbot.py  youtube.py
HasiiMusic/helpers/: __init__.py  _admins.py  _dataclass.py  _exec.py  _inline.py  _play.py  _preload.py  _queue.py  _thumbnails.py  _tournament.py  _utilities.py
HasiiMusic/locales/: en.json  my.json  si.json
HasiiMusic/plugins/: __init__.py  channelplay.py  new_chat.py
HasiiMusic/plugins/admin-controles/: broadcast.py  leave.py  restart.py
HasiiMusic/plugins/bot/: inline.py  repo.py  start.py
HasiiMusic/plugins/events/: callbacks.py  iquery.py  misc.py  new_chat.py  tournament_callbacks.py
HasiiMusic/plugins/features/: adminmention.py  bots.py  tournament_admin.py  tournament_player.py  vcinfo.py
HasiiMusic/plugins/games/: checkers.py  chess_game.py  tictactoe.py  utils.py
HasiiMusic/plugins/information/: ping.py  start.py  stats.py
HasiiMusic/plugins/misc/: dicegame.py
HasiiMusic/plugins/play/: play.py
HasiiMusic/plugins/playback/: play.py
HasiiMusic/plugins/playback-controls/: example_radio.py  loop.py  pause.py  play.py  radio.py  resume.py  seek.py  shuffle.py  skip.py  stop.py
HasiiMusic/plugins/settings/: auth.py  blacklist.py  channelplay.py  language.py
HasiiMusic/utils/: downloader.py  thumbnails.py
HasiiMusic/utils/decorators/: admins.py  play.py
docs/: index.html
strings/langs/: en.yml
tests/: conftest.py  test_cookie_handler_utils.py  test_downloader_utils.py  test_exceptions_utils.py  test_formatters_utils.py  test_sys_stats.py  test_tuning_utils.py
webapp/: player.html
