[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hasii-music-bot"
version = "2.0.0"
description = "A Telegram music streaming bot with multi-platform support"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Hasindu Lakshan", email = "hasindu@example.com"}
]
keywords = ["telegram", "music", "bot", "streaming", "pyrogram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "apscheduler>=3.10.4",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.12.0",
    "ffmpeg-python>=0.2.0",
    "future==1.0.0",
    "gitpython>=3.1.40",
    "heroku3>=5.2.0",
    "httpx==0.28.1",
    "motor>=3.6.0",
    "pillow==12.0.0",
    "psutil>=6.0.0",
    "pyrogram==2.2.13",
    "python-dotenv>=1.0.0",
    "ntgcalls==2.0.6",
    "py-tgcalls==2.2.8",
    "pyyaml==6.0.3",
    "requests>=2.32.0",
    "speedtest-cli>=2.1.3",
    "spotipy>=2.24.0",
    "tgcrypto>=1.2.5",
    "unidecode>=1.3.8",
    "yt-dlp==2025.11.12",
    "youtube-search-python @ git+https://github.com/CertifiedCoders/youtube-search-python",
    # Modern config management
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/hasindu-nagolla/HasiiMusicBot"
Repository = "https://github.com/hasindu-nagolla/HasiiMusicBot"
Issues = "https://github.com/hasindu-nagolla/HasiiMusicBot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["HasiiMusic*"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=HasiiMusic --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["HasiiMusic"]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
